--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -8,4 +8,15 @@ Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 
+@*
+Añadir función de la página "Counter" en "Home".
+Cada vez que se pulsa el botón, el incremento aumenta en 10.
+*@
 <Counter IncrementAmount="10" />
+
+<br><br>
+
+@*
+Añadir función de la página "FetchData" en "Home".
+*@
+<FetchData />
